[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "qctools"
version = "0.1.0"
description = "A Python package for quantum chemistry; educational purposes."
authors = [
  { name="QC-Devs Community", email="qcdevs@gmail.com"},
]
dependencies = [
    "numpy>=1.16",
    "pytest >=2.6",
    "scipy>=1.4",
]

[dev-dependencies]
pytest = "^2.6"